# mypalclarissa

./: .dockerignore  .env.docker.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.combined  Dockerfile.discord  LICENSE  README.md  api.py  bot_config.py  db.py  discord_bot.py  discord_monitor.py  docker-compose.combined.yml  docker-compose.yml  e2b_tools.py  email_monitor.py  llm_backends.py  local_files.py  logging_config.py  mem0_config.py  memory_manager.py  models.py  organic_response.py  personality.txt  pyproject.toml  railway.toml  telegram_bot.py
checkers/: __init__.py  ado.py  base.py  email.py  github.py  registry.py  scheduler.py
clarissa_core/: __init__.py  config.py  group_session.py  intent.py  llm.py  pipeline.py  rejection.py  tier_selector.py
db/: models.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: assistant.tsx  layout.tsx
frontend/app/api/chat/: route.ts
frontend/components/assistant-ui/: threadlist-sidebar.tsx
frontend/lib/: thread-adapter.ts
personalities/: clara.txt
scripts/: migrate_sandboxes.sh  migrate_to_postgres.py  sync_to_remote.sh
storage/: local_files.py
tools/: _loader.py  _registry.py  azure_devops.py  chat_history.py  docker_sandbox.py  github.py  local_files.py  playwright_browser.py  system_logs.py  web_search.py
tools/git/: __init__.py  _runner.py  branch.py  clone.py  commit.py  remote.py  staging.py  status.py
tools/github/: __init__.py  _client.py  actions.py  gists.py  issues.py  notifications.py  pull_requests.py  releases.py  repositories.py  stars.py  users.py
tools/planning/: __init__.py
