[tool.poetry]
name = "mypalclara"
version = "0.1.0"
description = "MyPalClara - AI assistant with session management and memory"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.14"

# API
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}

# Database
sqlalchemy = "^2.0"

# Memory system (OSS) with graph support
mem0ai = {extras = ["graph"], version = "^1.0.1"}
neo4j = "^5.0"  # Graph database driver

# LLM backends
openai = "^1.42.0"
huggingface_hub = "^0.26.0"

# General utils
requests = "^2.32.5"
python-dotenv = "^1.0.1"
imessage-reader = "^0.6.1"
httpx = "^0.28.0"  # Async HTTP client for web search

# Discord bot
"discord.py" = "^2.4.0"

# E2B code execution sandbox
e2b-code-interpreter = "^1.0.0"
e2b = "^1.0.0"  # Base sandbox for Claude Code template

# S3-compatible storage (Wasabi, AWS, etc.)
boto3 = "^1.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
