[tool.poetry]
name = "mypalclarissa"
version = "0.1.0"
description = "MyPalClarissa - AI assistant with session management and memory"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.14"

# API
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}

# Database
sqlalchemy = "^2.0"

# Memory system (OSS) with graph support
mem0ai = {extras = ["graph"], version = "^1.0.1"}
neo4j = "^5.0"  # Graph database driver

# PostgreSQL support
psycopg2-binary = "^2.9.9"  # PostgreSQL driver
pgvector = "^0.3.0"  # Vector support for mem0

# LLM backends
openai = "^1.42.0"
anthropic = "^0.40.0"
huggingface_hub = "^0.26.0"

# General utils
requests = "^2.32.5"
python-dotenv = "^1.0.1"
imessage-reader = "^0.6.1"
httpx = "^0.28.0"  # Async HTTP client for web search

# Discord bot
"discord.py" = "^2.4.0"

# Docker code execution sandbox
docker = "^7.0.0"

# S3-compatible storage (Wasabi, AWS, etc.)
boto3 = "^1.35.0"

# Tool system
watchdog = "^4.0.0"  # File watching for hot-reload
mcp = "^1.0.0"  # Model Context Protocol server

# Browser automation
playwright = "^1.49.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
